feat: add flyway migrator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url= jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Prevent Hibernate from creating tables. The database is managed through the migration files.
+spring.jpa.hibernate.ddl-auto=none
+
+# Flyway
+spring.flyway.schemas=migrations
+spring.flyway.locations=classpath:db/migration
+# This option allows migration files to be modified in development.
+# This should be false in production.
+spring.flyway.cleanOnValidationError=${FLYWAY_DEV}
