feat: Add Model Objects to Project
This change adds the model objects to the project, as well as their DB repositories, and tests for persistence.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.database-platform=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.datasource.hikari.schema=migrations
 
 # Prevent Hibernate from creating tables. The database is managed through the migration files.
 spring.jpa.hibernate.ddl-auto=none
