--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ before_install:
   - npm install -g yarn
 install:
   - cd ./shopify-client
-  - yarn 
+  - yarn
   - yarn run build
   - cp ./dist/index.html ../src/main/resources/templates
-  - cp ./dist/css ../src/main/resources/public
-  - cp ./dist/img ../src/main/resources/public
-  - cp ./dist/js ../src/main/resources/public
+  - cp -R ./dist/css ../src/main/resources/public
+  - cp -R ./dist/img ../src/main/resources/public
+  - cp -R ./dist/js ../src/main/resources/public
 deploy:
   provider: heroku
   api-key: $HEROKU_API_KEY
