--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ install:
   - cp -R ./dist/css ../src/main/resources/public
   - cp -R ./dist/img ../src/main/resources/public
   - cp -R ./dist/js ../src/main/resources/public
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script:
+  - mvn test -B
 deploy:
   provider: heroku
   api-key: $HEROKU_API_KEY
