--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - yarn
   - yarn run build
   - mkdir ../src/main/resources/public
-  - cp ./dist/index.html ../src/main/resources/templates
+  - cp ./dist/index.html ../src/main/resources/templates/
   - cp -R ./dist/css ../src/main/resources/public/
   - cp -R ./dist/img ../src/main/resources/public/
   - cp -R ./dist/js ../src/main/resources/public/
@@ -17,6 +17,8 @@ install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
   - mvn test -B
+before_deploy:
+  - ls ./src/main/resources/public
 deploy:
   provider: heroku
   api-key: $HEROKU_TEST
