--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_deploy:
   - ls ./src/main/resources/public/css
   - ls ./src/main/resources/templates
 deploy:
+  skip_cleanup: true
   provider: heroku
   api-key: $HEROKU_TEST
   app: sh0p1fy
