--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,10 @@ install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
   - mvn test -B
-before_deploy:
-  - ls ./src/main/resources/public/css
-  - ls ./src/main/resources/templates
 deploy:
   skip_cleanup: true
   provider: heroku
-  api-key: $HEROKU_TEST
+  api-key: $HEROKU_API_KEY
   app: sh0p1fy
   on:
-    branch: host-vue
+    branch: main
