ci: build vue in CI (#34)
* wip: restructure client and create spa controller

* wip: restructure client and create spa controller

* wip: build vue in ci

* fix: install node modules first

* fix: cp -R

* fix: custom build step

* fix: change directory back

* test: try to deploy vue

* fix: add test key

* create public folder

* fix: add /

* fix

* fix

* log folders

* do not cleanup

* port 8080

* cleanup

* add vue.config.js for local proxy

--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,13 @@ target/
 *.ipr
 
 ### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+public/
+templates/
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
