--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 
+# Postgres Config
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url= jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
@@ -18,3 +19,7 @@ spring.flyway.locations=classpath:db/migration
 # This option allows migration files to be modified in development.
 # This should be false in production.
 spring.flyway.cleanOnValidationError=${FLYWAY_DEV}
+
+# MiniShopify JWT config
+minishopify.app.jwtSecret= ${JWTSecret}
+minishopify.app.jwtExpirationMs= 86400000
